--- a/locale/ja_JP/LC_MESSAGES/ja.po
+++ b/locale/ja_JP/LC_MESSAGES/ja.po
@@ -581,10 +581,12 @@ msgid "Authentication failed!"
 msgstr "認証に失敗しました!"
 
 #: inc/auth.inc.php:89
-#: inc/auth.inc.php:95
-#: inc/auth.inc.php:105
-msgid "Login"
+msgid "Log in"
 msgstr "ログイン"
+
+#: inc/auth.inc.php:104
+msgid "Go"
+msgstr "実行する"
 
 #: inc/auth.inc.php:129
 msgid "You have logged out."
