--- a/locale/nl_NL/LC_MESSAGES/nl.po
+++ b/locale/nl_NL/LC_MESSAGES/nl.po
@@ -483,10 +483,12 @@ msgid "Authentication failed!"
 msgstr "Authenticatie mislukt!"
 
 #: inc/auth.inc.php:89
-#: inc/auth.inc.php:95
-#: inc/auth.inc.php:105
-msgid "Login"
-msgstr "Login"
+msgid "Log in"
+msgstr "Inloggen"
+
+#: inc/auth.inc.php:103
+msgid "Go"
+msgstr "Start"
 
 #: inc/auth.inc.php:129
 msgid "You have logged out."
