--- a/docs/i18n-template-db.pot
+++ b/docs/i18n-template-db.pot
@@ -1,10 +1,21 @@
-
-# The following is a list of strings that are not hard-code in the PHP 
-# files, but which are listed in the poweradmin database. Because of 
-# this, tools like xgettext will not notice these strings.
-# 
-# See also <https://www.poweradmin.org/wiki/TranslationContribution>.
+# Poweradmin translation.
+# Copyright (C) 2011 Poweradmin Development Team
+# This file is distributed under the same license as the Poweradmin package.
+# Rejo Zenger <rejo@poweradmin.org>, 2008.
 #
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: Poweradmin 2.1.6\n"
+"Report-Msgid-Bugs-To: edmondas@poweradmin.org\n"
+"POT-Creation-Date: 2011-06-08 23:45+0300\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en_EN\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 msgid "User is allowed to add new master zones."
 msgstr ""
@@ -39,7 +50,7 @@ msgstr ""
 msgid "User is allowed to add new supermasters."
 msgstr ""
 
-msgid "User is allowed to edit new supermasters."
+msgid "User is allowed to edit supermasters."
 msgstr ""
 
 msgid "User has full access. God-like. Redeemer."
