--- a/locale/zh_CN/LC_MESSAGES/zh.po
+++ b/locale/zh_CN/LC_MESSAGES/zh.po
@@ -3,10 +3,10 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <sh_yu2000@hotmail.com>, YEAR.
 # this translate version by yu
-#, fuzzy
+
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: poweradmin 2.1.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-30 12:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
