--- a/locale/fr_FR/LC_MESSAGES/fr.po
+++ b/locale/fr_FR/LC_MESSAGES/fr.po
@@ -2,15 +2,16 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Emmanuel Seyman <eseyman@edd.fr>, 2010.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: poweradmin 2.1.5\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: eseyman@edd.fr\n"
 "POT-Creation-Date: 2010-09-28 17:02+0200\n"
 "PO-Revision-Date: 2010-10-07 18:28+0200\n"
 "Last-Translator: Emmanuel Seyman <eseyman@edd.fr>\n"
 "Language-Team: poweradmin french\n"
-"Language: fr\n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
