--- a/locale/fr_FR/LC_MESSAGES/fr_db.po
+++ b/locale/fr_FR/LC_MESSAGES/fr_db.po
@@ -1,12 +1,13 @@
 # Emmanuel Seyman <eseyman@edd.fr>, 2010.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: poweradmin 2.1.5\n"
-"Report-Msgid-Bugs-To: Emmanuel Seyman <eseyman@edd.fr>\n"
+"Report-Msgid-Bugs-To: eseyman@edd.fr\n"
 "POT-Creation-Date: 2010-10-20 17:58+0200\n"
 "PO-Revision-Date: 2010-10-20 18:00+0200\n"
 "Last-Translator: Emmanuel Seyman <eseyman@edd.fr>\n"
-"Language-Team: EDD\n"
+"Language-Team: poweradmin french\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -14,12 +15,6 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Virtaal 0.6.1\n"
 
-# The following is a list of strings that are not hard-code in the PHP 
-# files, but which are listed in the poweradmin database. Because of 
-# this, tools like xgettext will not notice these strings.
-# 
-# See also <https://www.poweradmin.org/wiki/TranslationContribution>.
-#
 msgid "User is allowed to add new master zones."
 msgstr "L'utilisateur peut ajouter des zones maîtres."
 
@@ -30,26 +25,19 @@ msgid "User is allowed to see the content and meta data of zones he owns."
 msgstr "L'utilisateur peut voir le contenu et les méta-données de ses zones."
 
 msgid "User is allowed to edit the content of zones he owns."
-msgstr ""
-"L'utilisateur peut modifier le contenu et les méta-données de ses zones."
+msgstr "L'utilisateur peut modifier le contenu et les méta-données de ses zones."
 
 msgid "User is allowed to edit the meta data of zones he owns."
 msgstr "L'utilisateur peut voir les méta-données de ses zones."
 
 msgid "User is allowed to see the content and meta data of zones he does not own."
-msgstr ""
-"L'utilisateur peut voir le contenu et les méta-données des zones dont il "
-"n'est pas le propriétaire."
+msgstr "L'utilisateur peut voir le contenu et les méta-données des zones dont il n'est pas le propriétaire."
 
 msgid "User is allowed to edit the content of zones he does not own."
-msgstr ""
-"L'utilisateur peut modifier le contenu et les méta-données des zones dont il "
-"n'est pas le propriétaire."
+msgstr "L'utilisateur peut modifier le contenu et les méta-données des zones dont il n'est pas le propriétaire."
 
 msgid "User is allowed to edit the meta data of zones he does not own."
-msgstr ""
-"L'utilisateur peut modifier les méta-données des zones dont il n'est pas le "
-"propriétaire."
+msgstr "L'utilisateur peut modifier les méta-données des zones dont il n'est pas le propriétaire."
 
 msgid "User is allowed to perform searches."
 msgstr "L'utilisateur peut faire des recherches."
