--- a/locale/ja_JP/LC_MESSAGES/ja_db.po
+++ b/locale/ja_JP/LC_MESSAGES/ja_db.po
@@ -1,14 +1,22 @@
+# Poweradmin translation.
+# Copyright (C) 2011 Poweradmin Development Team
+# This file is distributed under the same license as the Poweradmin package.
+# 
+# Translators:
+# Koichi MATSUMOTO <mzch@me.com>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: Ｐoweradmin JP 1.0\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-21 00:39-0700\n"
-"PO-Revision-Date: 2011-03-09 11:06+0900\n"
-"Last-Translator: Koichi MATSUMOTO <mzch@mac.com>\n"
-"Language-Team: Japanese\n"
+"Project-Id-Version: Poweradmin\n"
+"Report-Msgid-Bugs-To: https://www.poweradmin.org/trac/report/1\n"
+"POT-Creation-Date: 2011-07-08 23:45+0300\n"
+"PO-Revision-Date: 2011-06-19 01:26+0000\n"
+"Last-Translator: mzch <mzch@me.com>\n"
+"Language-Team: Japanese (http://www.transifex.net/projects/p/poweradmin/team/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ja\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 msgid "User is allowed to add new master zones."
 msgstr "新たにマスターゾーンを追加する権限が与えられます。"
@@ -25,7 +33,8 @@ msgstr "自分が所有するゾーンの内容を編集する権限が与えら
 msgid "User is allowed to edit the meta data of zones he owns."
 msgstr "自分が所有するゾーンのメタデータを編集する権限が与えられます。"
 
-msgid "User is allowed to see the content and meta data of zones he does not own."
+msgid ""
+"User is allowed to see the content and meta data of zones he does not own."
 msgstr "オーナーが自分ではないゾーンの内容とメタデータを閲覧する権限が与えられます。"
 
 msgid "User is allowed to edit the content of zones he does not own."
@@ -43,7 +52,7 @@ msgstr "スーパーマスターを閲覧する権限が与えられます。"
 msgid "User is allowed to add new supermasters."
 msgstr "新たにスーパーマスターを追加する権限が与えられます。"
 
-msgid "User is allowed to edit new supermasters."
+msgid "User is allowed to edit supermasters."
 msgstr "スーパーマスターを編集する権限が与えられます。"
 
 msgid "User has full access. God-like. Redeemer."
@@ -64,7 +73,9 @@ msgstr "ほかのユーザーを編集する権限が与えられます。"
 msgid "User is allowed to edit the password of other users."
 msgstr "ほかのユーザーのパスワードを編集する権限が与えられます。"
 
-msgid "User is allowed to change the permission template that is assigned to a user."
+msgid ""
+"User is allowed to change the permission template that is assigned to a "
+"user."
 msgstr "ユーザーに割り当てられている権限テンプレートを変更する権限が与えられます。"
 
 msgid "User is allowed to add new permission templates."
@@ -72,4 +83,5 @@ msgstr "新たに権限テンプレートを追加する権限が与えられま
 
 msgid "User is allowed to edit existing permission templates."
 msgstr "既存の権限テンプレートを編集する権限が与えられます。"
+
 
