--- a/locale/ja_JP/LC_MESSAGES/ja.po
+++ b/locale/ja_JP/LC_MESSAGES/ja.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the Poweradmin package.
 # 
 # Translators:
+#   <eg@fbsd.lt>, 2011.
 # Koichi MATSUMOTO <mzch@me.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin\n"
 "Report-Msgid-Bugs-To: https://www.poweradmin.org/trac/report/1\n"
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
-"PO-Revision-Date: 2011-07-08 20:55+0000\n"
-"Last-Translator: edmondas <eg@fbsd.lt>\n"
+"PO-Revision-Date: 2011-11-05 12:32+0000\n"
+"Last-Translator: mzch <mzch@me.com>\n"
 "Language-Team: Japanese (http://www.transifex.net/projects/p/poweradmin/team/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -591,7 +592,7 @@ msgstr "config.inc.php にデータベースタイプが設定されていない
 
 #: inc/error.inc.php:75
 msgid "No database file has been set in config.inc.php."
-msgstr ""
+msgstr "config.inc.php にデータベースファイルが設定されていません。"
 
 #: inc/error.inc.php:76
 msgid ""
