--- a/locale/nb_NO/LC_MESSAGES/nb_db.po
+++ b/locale/nb_NO/LC_MESSAGES/nb_db.po
@@ -3,83 +3,83 @@
 # This file is distributed under the same license as the Poweradmin package.
 # 
 # Translators:
-# Ozan  <uobasar@gmail.com>, 2011.
+#   <pmknutsen@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin\n"
 "Report-Msgid-Bugs-To: https://github.com/poweradmin/poweradmin/issues\n"
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
-"PO-Revision-Date: 2012-02-14 09:00+0000\n"
-"Last-Translator: Yura Cagran <community@avoxip.com>\n"
-"Language-Team: Turkish (http://www.transifex.com/projects/p/poweradmin/language/tr/)\n"
+"PO-Revision-Date: 2012-05-15 19:09+0000\n"
+"Last-Translator: Per M Knutsen <pmknutsen@gmail.com>\n"
+"Language-Team: Norwegian Bokmål (http://www.transifex.com/projects/p/poweradmin/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: nb\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "User is allowed to add new master zones."
-msgstr "Kullanıcı yeni ana bölgeler ekleyebilir."
+msgstr "Bruker kan lage nye master soner."
 
 msgid "User is allowed to add new slave zones."
-msgstr "Kullanıcı yeni bağımlı bölgeler ekleyebilir."
+msgstr "Bruker kan lage nye slave soner."
 
 msgid "User is allowed to see the content and meta data of zones he owns."
-msgstr "Kullanıcı ona ait içeriği ve bölgelerin veri üstlerini görebilir."
+msgstr "Bruker kan se innhold og meta data i soner han/hun eier."
 
 msgid "User is allowed to edit the content of zones he owns."
-msgstr "Kullanıcı ona ait bölgelerin içeriğini düzenleyebilir."
+msgstr "Bruker kan redigere innholdet i soner han/hun eier."
 
 msgid "User is allowed to edit the meta data of zones he owns."
-msgstr "Kullanıcı ona ait bölgelerin veri üstlerini düzenleyebilir."
+msgstr "Bruker kan redigere meta data i soner han/hun eier."
 
 msgid ""
 "User is allowed to see the content and meta data of zones he does not own."
-msgstr "Kullanıcı ona ait olmayan içeriği ve bölgelerin veri üstlerini görebilir."
+msgstr "Bruker kan se innhold og meta data i soner han/hun ikke eier."
 
 msgid "User is allowed to edit the content of zones he does not own."
-msgstr "Kullanıcı ona ait olmayan bölgelerin içeriğini düzenleyebilir."
+msgstr "Bruker kan redigere innholdet i soner han/hun ikke eier."
 
 msgid "User is allowed to edit the meta data of zones he does not own."
-msgstr "Kullanıcı ona ait olmayan bölgelerin veri üstlerini düzenleyebilir."
+msgstr "Bruker kan redigere meta data i soner han/hun ikke eier."
 
 msgid "User is allowed to perform searches."
-msgstr "Kullanıcı arama yapabilir."
+msgstr "Bruker kan søke."
 
 msgid "User is allowed to view supermasters."
-msgstr "Kullanıcı ana kurucuları görüntüleyebilir."
+msgstr "Bruker kan se supermastere."
 
 msgid "User is allowed to add new supermasters."
-msgstr "Kullanıcı yeni ana kurucular ekleyebilir."
+msgstr "Bruker kan legge til nye supermastere."
 
 msgid "User is allowed to edit supermasters."
-msgstr "Kullanıcı ana kurucuları düzenleyebilir."
+msgstr "Bruker kan redigere supermastere."
 
 msgid "User has full access. God-like. Redeemer."
-msgstr "Kullanıcı tam yetkilidir. Admin."
+msgstr "Bruker har alle rettigheter."
 
 msgid "User is allowed to see other users and their details."
-msgstr "Kullanıcı diğer kullanıcıları ve ayrıntılarını görebilir."
+msgstr "Bruker kan se andre brukere og deres detaljer."
 
 msgid "User is allowed to add new users."
-msgstr "Kullanıcı yeni kullanıcılar oluşturabilir."
+msgstr "Bruker kan lage nye brukere."
 
 msgid "User is allowed to edit their own details."
-msgstr "Kullanıcı kendi bilgilerini değiştirebilir."
+msgstr "Bruker kan redigere hans/hennes egne detaljer."
 
 msgid "User is allowed to edit other users."
-msgstr "Kullanıcı diğer kullanıcıların bilgilerini değiştirebilir."
+msgstr "Bruker kan redigere andre brukere."
 
 msgid "User is allowed to edit the password of other users."
-msgstr "Kullanıcı diğer kullanıcıların parolalarını değiştirebilir."
+msgstr "Bruker kan endre passordet til andre brukere."
 
 msgid ""
 "User is allowed to change the permission template that is assigned to a "
 "user."
-msgstr "Kullanıcı bir kullanıcıya atanmış izin şablonunu değiştirebilir."
+msgstr "Bruker kan endre rettighets maler tildelt andre brukere."
 
 msgid "User is allowed to add new permission templates."
-msgstr "Kullanıcı yeni izin şablonunları ekleyebilir."
+msgstr "Bruker kan lage nye rettighets maler."
 
 msgid "User is allowed to edit existing permission templates."
-msgstr "Kullanıcı varolan izin şablonunlarını düzenleyebilir."
+msgstr "Bruker kan redigere eksisterende rettighets maler."
