--- a/locale/i18n-template-php.pot
+++ b/locale/i18n-template-php.pot
@@ -329,7 +329,7 @@ msgid "Password has been changed, please login."
 msgstr ""
 
 #: inc/record.inc.php:387
-msgid "You are trying to delete the SOA record. If are not allowed to remove it, unless you remove the entire zone."
+msgid "You are trying to delete the SOA record. You are not allowed to remove it, unless you remove the entire zone."
 msgstr ""
 
 #: inc/record.inc.php:751
