--- a/locale/nb_NO/LC_MESSAGES/nb.po
+++ b/locale/nb_NO/LC_MESSAGES/nb.po
@@ -335,7 +335,7 @@ msgstr "Passordet er endret. Vennligst logg inn."
 
 #: inc/record.inc.php:387
 msgid ""
-"You are trying to delete the SOA record. If are not allowed to remove it, "
+"You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
 msgstr "Du prøver å slette en SOA peker. Dette er ikke tillatt med mindre du sletter hele sonen."
 
