--- a/locale/tr_TR/LC_MESSAGES/tr.po
+++ b/locale/tr_TR/LC_MESSAGES/tr.po
@@ -335,7 +335,7 @@ msgstr "Şifre değiştirildi, lütfen giriş yapınız."
 
 #: inc/record.inc.php:387
 msgid ""
-"You are trying to delete the SOA record. If are not allowed to remove it, "
+"You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
 msgstr "SOA kaydını silmeye çalışıyorsunuz. Bu tüm bölgeyi silmedikçe yasaktır."
 
