--- a/locale/en_EN/LC_MESSAGES/en.po
+++ b/locale/en_EN/LC_MESSAGES/en.po
@@ -829,10 +829,10 @@ msgstr "Logout"
 
 #: inc/record.inc.php:387
 msgid ""
-"You are trying to delete the SOA record. If are not allowed to remove it, "
+"You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
 msgstr ""
-"You are trying to delete the SOA record. If are not allowed to remove it, "
+"You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
 
 #: inc/record.inc.php:751
