--- a/locale/cs_CZ/LC_MESSAGES/cs_db.po
+++ b/locale/cs_CZ/LC_MESSAGES/cs_db.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin\n"
-"Report-Msgid-Bugs-To: https://www.poweradmin.org/trac/report/1\n"
+"Report-Msgid-Bugs-To: https://github.com/poweradmin/poweradmin/issues\n"
 "POT-Creation-Date: 2011-07-08 23:45+0300\n"
 "PO-Revision-Date: 2011-11-03 12:59+0000\n"
 "Last-Translator: quimi <quimi@quimi.cz>\n"
