--- a/locale/cs_CZ/LC_MESSAGES/cs.po
+++ b/locale/cs_CZ/LC_MESSAGES/cs.po
@@ -926,7 +926,7 @@ msgstr ""
 msgid ""
 "Finally, if you see any errors during the installation process, a problem "
 "report would be appreciated. You can report problems (and ask for help) on "
-"the poweradmin-users mailinglist."
+"the <a href=\"http://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
 msgstr ""
 
 #: install/index.php:75
