--- a/locale/ja_JP/LC_MESSAGES/ja.po
+++ b/locale/ja_JP/LC_MESSAGES/ja.po
@@ -927,8 +927,8 @@ msgstr "このインストーラーを使わずに、手動でインストール
 msgid ""
 "Finally, if you see any errors during the installation process, a problem "
 "report would be appreciated. You can report problems (and ask for help) on "
-"the poweradmin-users mailinglist."
-msgstr "最後に、インストール処理中にエラーが発生した場合、問題を報告していただけるとありがたく思います。poweradmin-users メーリングリストに問題を報告して解決策を尋ねることができます。"
+"the <a href=\"http://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
+msgstr "最後に、インストール処理中にエラーが発生した場合、問題を報告していただけるとありがたく思います。<a href=\"http://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> メーリングリストに問題を報告して解決策を尋ねることができます。"
 
 #: install/index.php:75
 msgid "Do you want to proceed now?"
