--- a/locale/ru_RU/LC_MESSAGES/ru.po
+++ b/locale/ru_RU/LC_MESSAGES/ru.po
@@ -805,8 +805,8 @@ msgid "The alternative for this installer is a manual installation. Refer to the
 msgstr "Альтернативой данному установщику является установка вручную. Обратитесь к сайту poweradmin.org, если вы хотите пойти этим путём."
 
 #: index.php:30
-msgid "Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the poweradmin-users mailinglist."
-msgstr "Если вы столкнулись с ошибками в процессе установки, ваш отчёт об ошибках будет изучен. Вы можете разместить отчет и попросить помощи у пользователей в списке рассылки poweradmin."
+msgid "Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the <a href=\"http://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
+msgstr "Если вы столкнулись с ошибками в процессе установки, ваш отчёт об ошибках будет изучен. Вы можете разместить отчет и попросить помощи у пользователей в списке рассылки <a href=\"http://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a>."
 
 #: index.php:33
 msgid "Do you want to proceed now?"
