--- a/locale/i18n-template-php.pot
+++ b/locale/i18n-template-php.pot
@@ -1025,11 +1025,7 @@ msgid "Now we have finished the configuration, you should (must!) remove the dir
 msgstr ""
 
 #: install/index.php:319
-msgid "After you have removed the directory, you can login to <a href=\"../index.php\">Poweradmin</a> with username \"admin\" and password \""
-msgstr ""
-
-#: install/index.php:319
-msgid "\". You are highly encouraged to change these as soon as you are logged in."
+msgid "After you have removed the directory, you can login to <a href=\"../index.php\">Poweradmin</a>."
 msgstr ""
 
 #: list_supermasters.php:51 delete_supermaster.php:45
