--- a/locale/fr_FR/LC_MESSAGES/fr.po
+++ b/locale/fr_FR/LC_MESSAGES/fr.po
@@ -714,7 +714,7 @@ msgstr ""
 "nom."
 
 #: inc/error.inc.php:87
-msgid "You can not point a NS or MX record to a CNAME record. Remove or rame the CNAME record first, or take another name."
+msgid "You can not point a NS or MX record to a CNAME record. Remove or rename the CNAME record first, or take another name."
 msgstr ""
 "Vous ne pouvez pas faire pointer un enregistrement NS ou MX vers un "
 "enregistrement CNAME. Retirez ou renommez l'enregistrement CNAME d'abord ou "
