--- a/locale/ru_RU/LC_MESSAGES/ru.po
+++ b/locale/ru_RU/LC_MESSAGES/ru.po
@@ -416,7 +416,7 @@ msgstr "Это не правильный адрес IPv4."
 msgid "This is not a valid CNAME. Did you assign an MX or NS record to the record?"
 msgstr "Это не правильный алиас. Вы назначили MX- или NS-запись здесь?"
 
-msgid "You can not point a NS or MX record to a CNAME record. Remove or rame the CNAME record first, or take another name."
+msgid "You can not point a NS or MX record to a CNAME record. Remove or rename the CNAME record first, or take another name."
 msgstr "Вы не можете указать в MX- или NS-записи алиас. Сначала удалите CNAME-запись, или укажите другое имя"
 
 msgid "Invalid value for name field of SOA record. It should be the name of the zone."
