Use secure links.

--- a/locale/i18n-template-php.pot
+++ b/locale/i18n-template-php.pot
@@ -881,7 +881,7 @@ msgid "The alternative for this installer is a manual installation. Refer to the
 msgstr ""
 
 #: install/index.php:73
-msgid "Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the <a href=\"http://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
+msgid "Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the <a href=\"https://groups.google.com/group/poweradmin\" target=\"blank\">poweradmin</a> mailinglist."
 msgstr ""
 
 #: install/index.php:75
